// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Questionnaire profile view renders correctly: questionnaire details keyValue pairs 1`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Last Changed:
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    4/11/2020
  </dd>
</div>
`;

exports[`Questionnaire profile view renders correctly: questionnaire details keyValue pairs 2`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Version
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    1
  </dd>
</div>
`;

exports[`Questionnaire profile view renders correctly: questionnaire items preview 1`] = `
<ul
  class="questionnaireItemsList"
>
  <li
    class="questionnaireItemsList-title"
    data-testid="linkId-/G1/Q4"
  >
    <span
      class="ant-typography"
    >
      What pizza toppings would you like?
    </span>
     
    <span
      class="ant-tag ant-tag-default"
    >
      linkId: 
      /G1/Q4
    </span>
    <span
      class="ant-tag ant-tag-default"
    >
      type: 
      choice
    </span>
  </li>
  <li>
    <ul
      class="questionnaireItemsList__questions-list"
    >
      <li
        data-testid="linkId-/G1/Q4-help"
      >
        Favorite toppings
      </li>
    </ul>
  </li>
</ul>
`;

exports[`no items edge case: questionnaire meta 1`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Last Changed:
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    4/11/2020
  </dd>
</div>
`;

exports[`no items edge case: questionnaire meta 2`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Version
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    1
  </dd>
</div>
`;

exports[`no items edge case: questionnaire meta 3`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Subject type:
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    Organization
  </dd>
</div>
`;

exports[`no items edge case: questionnaire meta 4`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Publisher:
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    Health eData Inc
  </dd>
</div>
`;

exports[`no items edge case: questionnaire meta 5`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Effective period start:
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    2020-04-11T22:01:37.262Z
  </dd>
</div>
`;

exports[`no items edge case: questionnaire meta 6`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Effective period end:
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    2020-04-11T22:01:37.262Z
  </dd>
</div>
`;

exports[`no items edge case: questionnaire meta 7`] = `
<div
  class="keyValueGrid-pair"
>
  <dt
    class="keyValueGrid-pair__label"
  >
    Last reviewed date:
  </dt>
  <dd
    class="keyValueGrid-pair__value"
  >
    4/11/2020
  </dd>
</div>
`;
